--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,48 @@
 *{
-    margin: 0%;
-    padding: 0%;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.jumbotron{
-    background-color: lightgray;
+
+
+
+
+
+#logo-img{
+    width: 100px;
+    height: 100px;
+    float: left;
 }
-.img-fluid{
-    width: 60%;
+#nav1{
+    background-color: #ffc107;
+    border:0px;
+    border-radius: 0px;
+    margin-bottom: 15px;
+}
+/* for heading style */
+#h1he{
+    text-align: center;
+    font-size: 5vw;
+    color: #dc3545;
+
+
+}
+#bty{
+    margin-top: 5vw;
+margin-left: 28vw;
+    margin-bottom: 5vw;
+}
+
+
+
+
+
+/* for crousel image */
+.cra{
+    width: 100%;
+    height: 300px;
+}
+/* video*/
+#vide{
+    margin-top: 20px;
 }
