edit style.css file

--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,11 @@ margin-left: 28vw;
     height: 300px;
 }
 /* video*/
-#vide{
+#video{
     margin-top: 20px;
 }
-=======
+
 .img-fluid{
-  width=60%;
+  width:60%;
 }
 
