--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,31 @@
     box-sizing: border-box;
 }
 
+.background-wrap {
+    position: fixed;
+    z-index: -1000;
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+#video-bg-elem {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 70%;
+    min-width: 100%;
+}
 
 
-
+.header{
+    position: absolute;
+	width: 100%;
+	min-height: 100%;
+	z-index: 1000;
+}
 
 #logo-img{
     width: 100px;
@@ -14,26 +36,85 @@
     float: left;
 }
 
-#nav1{
+/* #nav1{
     background-color: #ffc107;
     border:0px;
     border-radius: 0px;
     margin-bottom: 15px;
+} */
+
+#nav1{
+    opacity: 0.8;
 }
 /* for heading */
-#h1he{
+/* #h1he{
     text-align: center;
     font-size: 5vw;
     color: #dc3545;
   
-}
+} */
 #bty{
     margin-top: 5vw;
 margin-left: 28vw;
     margin-bottom: 5vw;
 }
 
-
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .searchbox {
+    position: relative;
+    display: block;
+    width: 100%;
+    max-width: 53px;
+    transition: 0.4s linear;
+    overflow: hidden;
+  }
+  .container .searchbox .searchbox__input {
+    display: block;
+    appearance: none;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background-color: #24233A;
+    padding: 15px;
+    color: #24233A;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.4s linear;
+  }
+  .container .searchbox .searchbox__input::placeholder {
+    color: #24233A;
+  }
+  .container .searchbox .searchbox__icon {
+    position: absolute;
+    right: calc(53px / 2);
+    top: 50%;
+    transform: translate(50%, -50%);
+    width: 20px;
+    height: 20px;
+    pointer-events: none;
+  }
+  .container .searchbox .searchbox__icon path {
+    fill: #00F494;
+    transition: 0.4s linear;
+  }
+  .container .searchbox:focus-within {
+    max-width: 300px;
+  }
+  .container .searchbox:focus-within .searchbox__input {
+    background-color: #FFF;
+    padding-right: 50px;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.4);
+  }
+  .container .searchbox:focus-within .searchbox__icon path {
+    fill: #24233A;
+  }
 
 
 
@@ -43,11 +124,12 @@ margin-left: 28vw;
     height: 300px;
 }
 /* video*/
-#video{
+/* #video{
     margin-top: 20px;
-}
+} */
 
 .img-fluid{
   width:60%;
 }
+
 
