add css to social icons

--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,13 @@ width:60%;
   margin: 50px 0px auto;
   padding: 20px 0px 20px 0px;
 }
+/* fonticons css */
+.profile-link i{
+  color: black;
+  font-size: 30px;
+  margin-left: 25px;
+}
+
+.profile-link i:hover{
+color: #dc3545;
+}
