--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ footer h6:before{
 
 .footer-social-links{
   background-color: #2e3a3fd7;
+  margin-top: 50px;
 }
 .new-footer{
   background-color: darkslategrey;
