--- a/css/style.css
+++ b/css/style.css
@@ -207,16 +207,16 @@ footer h6:before{
 }
 
 
-.sec-3{
+.social-media{
   display: flex;
   justify-content: center;
   padding: 0px;
 }
-.sec-3 ul{
+.social-media ul{
   list-style: none;
   margin: 2px;
 }
-.sec-3 ul li{
+.social-media ul li{
   display: inline-block;
   width: 60px;
   height: 60px;
@@ -225,25 +225,25 @@ footer h6:before{
   border-radius: 50%;
   margin-right: 20px;
 }
-.sec-3 ul li i{
+.social-media ul li i{
   color: white;
   font-size: 24px;
   line-height: 20px;
   text-align: center;
 }
-.sec-3 ul li:nth-child(1):hover{
+.social-media ul li:nth-child(1):hover{
   background-color: #3b5999;
 }
-.sec-3 ul li:nth-child(2):hover{
+.social-media ul li:nth-child(2):hover{
   background-color: #55acee;
 }
-.sec-3 ul li:nth-child(3):hover{
+.social-media ul li:nth-child(3):hover{
   background-color: #dd4b39;
 }
-.sec-3 ul li:nth-child(4):hover{
+.social-media ul li:nth-child(4):hover{
   background-color: #0077B5;
 }
-.sec-3 ul li:nth-child(5):hover{
+.social-media ul li:nth-child(5):hover{
   background-color: #ea4c89;
 }
 
@@ -287,4 +287,47 @@ footer h6:before{
 
 .useful-links p a:hover::after{
   width: 100%;
+}
+
+@media (max-width:500px){
+  .social-media{
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+}
+.social-media ul{
+    list-style: none;
+    margin: 2px;
+}
+.social-media ul li{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    background-color: rgb(49, 38, 38);
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.social-media ul li i{
+    color: white;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+}
+.social-media ul li:nth-child(1):hover{
+    background-color: #3b5999;
+}
+.social-media ul li:nth-child(2):hover{
+    background-color: #55acee;
+}
+.social-media ul li:nth-child(3):hover{
+    background-color: #dd4b39;
+}
+.social-media ul li:nth-child(4):hover{
+    background-color: #0077B5;
+}
+.social-media ul li:nth-child(5):hover{
+    background-color: #ea4c89;
+}
+
 }
