--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,14 @@
   box-sizing: border-box;
 }
 
-
+#pageloader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff url("https://media.giphy.com/media/l0He4fJxPCbfqv7Xi/giphy.gif")
+no-repeat center;
+    z-index: 99999;
+}
 
 
 
