--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,13 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+
+
+}
+body{
+    background:no-repeat, url("../images/apple-1853259_1280.jpg");
+
 }
 
 #pageloader{
@@ -152,18 +159,22 @@ no-repeat center;
   border:0px;
   border-radius: 0px;
   margin-bottom: 15px;
+    opacity: 0.8;
 }
 /* for heading */
 #h1he{
   text-align: center;
   font-size: 5vw;
   color: #dc3545;
+    margin-bottom: 70px;
 
 }
 #bty{
   margin-top: 5vw;
-margin-left: 28vw;
+margin-left: 30vw;
   margin-bottom: 5vw;
+    box-shadow: #7abaff;
+
 }
 
 
@@ -173,7 +184,10 @@ margin-left: 28vw;
 /* for crousel image */
 .cra{
   width: 100%;
-  height: 300px;
+  height: 500px;
+
+
+    box-shadow: 5px 10px #888888;;
 }
 /* video*/
 #vide{
