--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@
 }
 #main{
     background:no-repeat, url("../images/apple-1853259_1280.jpg");
-opacity: 0.7;
+opacity: 0.8;
 }
 
 #pageloader{
@@ -176,7 +176,15 @@ margin-left: 30vw;
     box-shadow: #7abaff;
 
 }
+a{
 
+    font-size: 20px;
+    color: #c69500;
+}
+a:hover{
+    color: #002752;
+    font-size: 25px
+}
 
 
 
